<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.CreateAccount"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_account_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_activity_create_account"
            android:textSize="@dimen/toolbar_text_size"
            android:gravity="center"
            android:fontFamily="@font/nexa_bold"
            android:textColor="@color/smoke_grey"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:elevation="@dimen/cardView_elevation"
        app:cardBackgroundColor="@color/smoke_grey_opac_60"
        app:cardCornerRadius="@dimen/MainActivity_card_corner_radius"
        android:padding="@dimen/padding"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_regist_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_grey"
                    android:fontFamily="@font/nexa_light"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_regist_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_grey"
                    android:fontFamily="@font/nexa_light"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:fontFamily="@font/nexa_light"
                android:textSize="@dimen/button_textSize"
                android:background="@drawable/button_round_background"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/padding"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>